@@ -1,24 +1,9 @@
 #
-# Copyright (c) 2001-2004 Twisted Matrix Laboratories.
+# Copyright (c) 2001-2005 Twisted Matrix Laboratories.
 # See LICENSE for details.
 
-
-import sys, os
 from twisted.trial import unittest
-
 from twisted.xish import xmlstream
-from twisted.xish import utility
-
-class AuthStandin(xmlstream.ConnectAuthenticator):
-    namespace = "testns"
-    def __init__(self, testcase):
-        xmlstream.Authenticator.__init__(self, "foob")
-        self.testcase = testcase
-    
-    def streamStarted(self, rootelem):
-        self.testcase.streamStarted = True
-        self.testcase.assertEquals(rootelem["id"], "12345")
-        self.testcase.assertEquals(rootelem["from"], "testharness")
 
 class XmlStreamTest(unittest.TestCase):
     def setUp(self):
@@ -26,7 +11,7 @@ class XmlStreamTest(unittest.TestCase):
         self.streamStarted = False
         self.streamEnded = False
         self.outlist = []
-        self.xmlstream = xmlstream.XmlStream(AuthStandin(self))
+        self.xmlstream = xmlstream.XmlStream()
         self.xmlstream.transport = self
         self.xmlstream.transport.write = self.outlist.append
 
@@ -34,15 +19,19 @@ class XmlStreamTest(unittest.TestCase):
     def loseConnection(self):
         self.xmlstream.connectionLost("no reason")
     
+    def streamStartEvent(self, rootelem):
+        self.streamStarted = True
+
     def streamErrorEvent(self, errelem):
         self.errorOccurred = True
-        self.assertEquals(errelem["id"], "123")
 
     def streamEndEvent(self, _):
         self.streamEnded = True
         
     def testBasicOp(self):
         xs = self.xmlstream
+        xs.addObserver(xmlstream.STREAM_START_EVENT,
+                       self.streamStartEvent)
         xs.addObserver(xmlstream.STREAM_ERROR_EVENT,
                        self.streamErrorEvent)
         xs.addObserver(xmlstream.STREAM_END_EVENT,
@@ -50,19 +39,14 @@ class XmlStreamTest(unittest.TestCase):
 
         # Go...
         xs.connectionMade()
-        self.assertEquals(self.outlist[0], "<stream:stream xmlns='testns' xmlns:stream='http://etherx.jabber.org/streams' to='foob'>")
+        xs.send("<root>")
+        self.assertEquals(self.outlist[0], "<root>")
         
-        xs.dataReceived("<stream:stream xmlns='testns' xmlns:stream='http://etherx.jabber.org/streams' from='testharness' id='12345'>")
+        xs.dataReceived("<root>")
         self.assertEquals(self.streamStarted, True)
 
         self.assertEquals(self.errorOccurred, False)
         self.assertEquals(self.streamEnded, False)
-        xs.dataReceived("<stream:error id='123'/>")
+        xs.dataReceived("<child><unclosed></child>")
         self.assertEquals(self.errorOccurred, True)
         self.assertEquals(self.streamEnded, True)
-
-
-        
-        
-        
-        
